<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="title_activity_user_settings">UserSettingsActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="your_current_weight">Your Current Weight</string>
    <string name="your_goal_calorie_intake">Your Goal Calorie intake:</string>
    <string name="calories_consumed">Calories Consumed</string>
    <string name="your_goal_weight">Your Goal Weight:</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="calories_remaining">Calories Remaining</string>
    <string name="user_settings">User Settings</string>
    <string name="food_and_activity_journal">Food and Activity Journal</string>
    <string name="history">History</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="calories">Calories</string>
    <string name="save">Save</string>
    <string name="current_weight">Current Weight (lb):</string>
    <string name="goal_weight">Goal Weight (lb):</string>
    <string name="sex">Sex:</string>
    <string name="age">Age:</string>
    <string name="height">Height (feet):</string>
    <string name="save_settings">Save Settings</string>
    <string name="reset">Reset Journal</string>

    <string-array name="sex">

        <item>Male</item>
        <item>Female</item>

    </string-array>

    <string-array name="activityFood">

        <item>Activity</item>
        <item>Food</item>

    </string-array>

</resources>